--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ TCAIssue/TCAIssue.xcodeproj/xcshareddata/**
 TCAIssue/TCAIssue.xcworkspace/**
 TCAIssue/TCAIssue.xcworkspace/xcshareddata/**
 TCAIssue/TCAIssue.xcodeproj/xcuserdata/bakrmohamed.xcuserdatad/xcschemes
+TCAIssue/build
